--- a/css/styles.css
+++ b/css/styles.css
@@ -1920,7 +1920,7 @@ a:hover.back-to-top {
 }
 
 
-/* .product {
+.product {
 	width: 100%;
 	background-image: url(../images/banner_company.jpg);
 	background-size: cover;
@@ -1942,7 +1942,15 @@ a:hover.back-to-top {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-} */
+}
+
+.gongye {
+	width: 100%;
+	background-image: url(../images/banner_gongye.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
 
 
 
@@ -2743,11 +2751,11 @@ a:hover.back-to-top {
 
 
 
- 
+
 
 
 #contact .imageslist .col-lg-2 img,
-#contact .imageslist .col-lg-4 img{
+#contact .imageslist .col-lg-4 img {
 	width: 100%;
 	height: 70%;
 }
@@ -2761,7 +2769,8 @@ a:hover.back-to-top {
 #friend h2,
 #google-map h2,
 #jianJie h2,
-#hexin h2 {
+#hexin h2,
+#lowCode h2 {
 	padding: 50px 0;
 	text-align: center;
 }
@@ -3023,4 +3032,19 @@ a:hover.back-to-top {
 	font-weight: 1.3rem;
 	line-height: 2.5rem;
 	color: #000000;
+}
+
+
+/* 低代码pass */
+#lowCode  .container {
+	 width: 100%;
+	 display: flex;
+	 justify-content: space-around;
+	 text-align: center;
+}
+#lowCode  .container .card {
+	border: none;
+}
+#lowCode  .container .card img{
+	width: 40%;
 }
