--- a/css/styles.css
+++ b/css/styles.css
@@ -962,6 +962,7 @@ screen and (-ms-high-contrast: none) {
 	border-bottom-left-radius: 0.375rem;
 	border-bottom-right-radius: 0.375rem;
 	background-color: #fff;
+	height: 340px;
 }
 
 .cards-2 h3 {
@@ -1463,6 +1464,7 @@ screen and (-ms-high-contrast: none) {
 
 .filter .element-item img {
 	max-width: 100%;
+	height: 100%;
 	margin: 0;
 	transition: all 0.3s;
 }
@@ -2749,6 +2751,9 @@ a:hover.back-to-top {
 	background-repeat: no-repeat;
 }
 
+.img-fluid{
+	height: 100%;
+}
 
 #LINXPaaS .LINXPaaCardLeft::before {
 	position: absolute;
