--- a/css/styles.css
+++ b/css/styles.css
@@ -788,7 +788,7 @@ screen and (-ms-high-contrast: none) {
 /*********************/
 
 .home {
-	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-back.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -954,6 +954,7 @@ screen and (-ms-high-contrast: none) {
 .cards-2 .card-image img {
 	border-top-left-radius: 0.375rem;
 	border-top-right-radius: 0.375rem;
+	height: 210px;
 }
 
 .cards-2 .card-body {
@@ -1301,12 +1302,12 @@ screen and (-ms-high-contrast: none) {
 .slider .card-image {
 	/* 	width: 6rem;
 	height: 6rem; */
-	width: 15rem;
+	width: 20rem;
 	height: 15rem;
 	margin-right: auto;
 	margin-bottom: 0.25rem;
 	margin-left: auto;
-	border-radius: 50%;
+	border-radius:10px;
 }
 
 .slider .card .card-body {
@@ -1467,6 +1468,8 @@ screen and (-ms-high-contrast: none) {
 	height: 100%;
 	margin: 0;
 	transition: all 0.3s;
+	object-fit: cover;
+	border: 3px solid #fff;
 }
 
 .filter .element-item:hover img {
@@ -1912,7 +1915,7 @@ a:hover.back-to-top {
 	background-image: url(../images/banner_sever.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: top;
 }
 
 .gongye {
@@ -2481,6 +2484,7 @@ a:hover.back-to-top {
 		height: 360px;
 		padding: 20px;
 		border-radius: 10px;
+		border: 1px solid #dedede;
 	}
 
 	.cards-1 .card p {
@@ -2698,7 +2702,7 @@ a:hover.back-to-top {
 	background-image: url(../images/technology.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: top;
+	background-position: 0% 10%;
 	padding-top: 20px;
 }
 
@@ -2743,12 +2747,13 @@ a:hover.back-to-top {
 	content: "";
 	top: 0px;
 	right: 0px;
-	width: 80px;
-	height: 76px;
+	width: 60px;
+	height: 60px;
 	background-image: url(../images/icon/arrowRu.png);
 	background-size: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
+	transform: rotate(-45deg);
 }
 
 .img-fluid{
@@ -2760,12 +2765,13 @@ a:hover.back-to-top {
 	content: "";
 	top: 60px;
 	right: 0px;
-	width: 80px;
-	height: 76px;
+	width: 60px;
+	height: 60px;
 	background-image: url(../images/icon/arrowRd.png);
 	background-size: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
+	transform: rotate(45deg);
 }
 
 #LINXPaaS .LINXPaaCardRight::after {
@@ -2773,12 +2779,13 @@ a:hover.back-to-top {
 	content: "";
 	top: 0px;
 	right: 110px;
-	width: 80px;
-	height: 76px;
+	width: 60px;
+	height: 60px;
 	background-image: url(../images/icon/arrowRd.png);
 	background-size: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
+	transform: rotate(45deg);
 }
 
 #LINXPaaS .LINXPaaCardRight::before {
@@ -2786,12 +2793,13 @@ a:hover.back-to-top {
 	content: "";
 	top: 70px;
 	right: 110px;
-	width: 80px;
-	height: 76px;
+	width: 60px;
+	height: 60px;
 	background-image: url(../images/icon/arrowRu.png);
 	background-size: 100%;
 	background-position: center;
 	background-repeat: no-repeat;
+	transform: rotate(-45deg);
 }
 
 
@@ -2817,8 +2825,8 @@ a:hover.back-to-top {
 }
 
 #LINXPaaS img {
-	width: 70px;
-	height: 70px;
+	width: 60px;
+	height: 60px;
 	padding: 10px;
 	background-color: #14bf98;
 	border-radius: 50%;
@@ -2892,6 +2900,7 @@ a:hover.back-to-top {
 #contact .imageslist .col-lg-4 img {
 	width: 100%;
 	height: 70%;
+	object-fit: scale-down
 }
 
 
@@ -3128,8 +3137,13 @@ a:hover.back-to-top {
 #friend .col-md-6 img {
 	width: 80%;
 	height: 80%;
+	object-fit: contain;
 }
-
+#friend .col-md-6:nth-child(2) img{
+	width: 90%;
+	height: 90%;
+	object-fit: contain;
+}
 
 
 #friend .col-md-2 img {
@@ -3137,6 +3151,10 @@ a:hover.back-to-top {
 	height: 100%;
 }
 
+#friend .col-md-3 img {
+    width: 100%;
+    height: 100%;
+}
 
 
 #AllProduct {
@@ -3235,12 +3253,16 @@ a:hover.back-to-top {
 	width: 400px;
 	height: 400px;
 	background-image: url(../images/office.png);
+	background-position: center;
+	background-size: cover;
 }
 
 #Office .officeRight2 {
 	width: 400px;
 	height: 400px;
 	background-image: url(../images/office2.png);
+	background-position: center;
+	background-size: cover;
 }
 
 #Office .officeRight:hover,
