--- a/css/styles.css
+++ b/css/styles.css
@@ -3167,17 +3167,18 @@ a:hover.back-to-top {
 	margin: 0 auto;
 }
 
-#LinxMom h2 {
+#LinxMom h2,
+#AllProduct h2{
 	text-align: center;
 	margin: 70px 0 30px 0;
 }
 
 #LinxMom .LinxImage {
 	width: 100%;
-	height: 600px;
-	background-image: url(../images/mom.png);
+	height: 300px;
+	background-image: url(../images/mom2.png);
 	background-repeat: no-repeat;
-	background-size: auto;
+	background-size: contain;
 	background-position: center;
 }
 
