--- a/css/styles.css
+++ b/css/styles.css
@@ -788,8 +788,8 @@ screen and (-ms-high-contrast: none) {
 /*********************/
 
 .home {
-	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)), 
-	url('../images/header-back.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)),
+		url('../images/header-back.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -964,7 +964,11 @@ screen and (-ms-high-contrast: none) {
 	border-bottom-left-radius: 0.375rem;
 	border-bottom-right-radius: 0.375rem;
 	background-color: #fff;
-	height: 265px;
+	height: 310px;
+}
+
+.cards-2 .card-image img {
+	width: 100%;
 }
 
 .cards-2 h3 {
@@ -1308,7 +1312,7 @@ screen and (-ms-high-contrast: none) {
 	margin-right: auto;
 	margin-bottom: 0.25rem;
 	margin-left: auto;
-	border-radius:10px;
+	border-radius: 10px;
 }
 
 .slider .card .card-body {
@@ -1470,7 +1474,7 @@ screen and (-ms-high-contrast: none) {
 	margin: 0;
 	transition: all 0.3s;
 	object-fit: cover;
-	border: 3px solid #fff;
+	border: 3px solid #51dbc7;
 }
 
 .filter .element-item:hover img {
@@ -1488,7 +1492,7 @@ screen and (-ms-high-contrast: none) {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(0, 0, 0, 0.2);
 	opacity: 1;
 	text-align: center;
 	transition: all 0.3s;
@@ -1926,7 +1930,8 @@ a:hover.back-to-top {
 	background-repeat: no-repeat;
 	background-position: center;
 }
-.lowInfo{
+
+.lowInfo {
 	width: 100%;
 	background-image: url(../images/banner_low.jpg);
 	background-size: cover;
@@ -2138,7 +2143,7 @@ a:hover.back-to-top {
 	}
 
 	.filter .element-item .element-item-overlay {
-		opacity: 0;
+		/* opacity: 0; */
 		transition: opacity 0.3s ease;
 	}
 
@@ -2437,6 +2442,8 @@ a:hover.back-to-top {
 /* Min-width width 1200px */
 @media (min-width: 1200px) {
 
+
+
 	/* General Styles */
 	.p-heading {
 		width: 55%;
@@ -2638,6 +2645,7 @@ a:hover.back-to-top {
 /* Min-width width 1600px */
 @media (min-width: 1600px) {
 
+
 	/* Navigation */
 	.navbar-custom {
 		/* padding-right: 12rem;
@@ -2757,7 +2765,7 @@ a:hover.back-to-top {
 	transform: rotate(-45deg);
 }
 
-.img-fluid{
+.img-fluid {
 	height: 100%;
 }
 
@@ -3140,7 +3148,8 @@ a:hover.back-to-top {
 	height: 80%;
 	object-fit: contain;
 }
-#friend .col-md-6:nth-child(2) img{
+
+#friend .col-md-6:nth-child(2) img {
 	width: 90%;
 	height: 90%;
 	object-fit: contain;
@@ -3153,8 +3162,8 @@ a:hover.back-to-top {
 }
 
 #friend .col-md-3 img {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 
@@ -3168,7 +3177,7 @@ a:hover.back-to-top {
 }
 
 #LinxMom h2,
-#AllProduct h2{
+#AllProduct h2 {
 	text-align: center;
 	margin: 70px 0 30px 0;
 }
@@ -3507,4 +3516,104 @@ a:hover.back-to-top {
 
 .animate__fadeInUpBig {
 	--animate-duration: 5s;
+}
+
+
+#projects .containerMap {
+	width: 100%;
+	height: 700px;
+	overflow: hidden;
+	background-image: url(../images/map.jpg);
+	background-size: contain;
+	background-position: center;
+	/* background-repeat: no-repeat; */
+	position: relative;
+}
+
+.containerMap #flexed1 {
+	position: absolute;
+	top: -70px !important;
+	left: 33% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+.containerMap #flexed2 {
+	position: absolute;
+	top: -100px !important;
+	left: 45% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+.containerMap #flexed3 {
+	position: absolute;
+	top: -70px !important;
+	left: 57% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+.containerMap #flexed4 {
+	position: absolute;
+	top: 375px !important;
+	left: 39% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+.containerMap #flexed5 {
+	position: absolute;
+	top: 375px !important;
+	left: 52% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+.containerMap #flexed6 {
+	position: absolute;
+	top: 150px !important;
+	left: 60% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+
+.containerMap #flexed7 {
+	position: absolute;
+	top: 140px !important;
+	left: 45% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+.containerMap #flexed8 {
+	position: absolute;
+	top: 150px !important;
+	left: 30% !important;
+	width: 180px;
+	height: 180px;
+	border-radius: 10%;
+}
+
+
+#homeMom .img-fluid {
+	width: 320px !important;
+}
+
+#homeMom .card-title {
+	text-align: center;
+	line-height: 0;
+}
+
+
+#homeMom .card {
+	margin-bottom: 40px;
 }
